Antes de desplegar